# dancing_duck

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  STYLE.md  build.sh  flash.sh  flash_image_and_bootloader.jlink  wifi_example.sh
pcb/dancing_duck/: adafruit.bak  adafruit.kicad_sym  dancing_duck.dsn  dancing_duck.kicad_pcb  dancing_duck.kicad_prl  dancing_duck.kicad_pro  dancing_duck.kicad_sch  fp-info-cache  fp-lib-table  raspberry_pi.bak  raspberry_pi.kicad_sym  sym-lib-table
pcb/dancing_duck/adafruit.pretty/: drv8833_breakout.kicad_mod  lis2mdl_breakout.kicad_mod
pcb/dancing_duck/raspberry_pi.pretty/: RPi_Pico_SMD_W.kicad_mod
python/: battery_drain_down_test.py  mac_example.py  mag_calibrate.py  wota.py  wota_x.py
python_test/: mag_cal.py  test.py
server/: README.md  grafana_duck_dance_party.json  mosquitto_db_drop.sh  rpi4_setup.sh  telegraf.conf
show/: RUNBOOK.md  config.json  duck_coordinator.py  duck_mqtt_cli.py  run_show.sh  stop_show.sh
src/: FreeRTOSConfig.h  config.h  lwipopts.h  main.c
src/adc/: adc.c  adc.h
src/blink/: blink.c  blink.h
src/commanding/: commanding.c  commanding.h
src/dance/: dance_generator.c  dance_generator.h  dance_time.c  dance_time.h
src/magnetometer/: lis2mdl.c  lis2mdl.h  magnetometer.c  magnetometer.h
src/motor/: motor.c  motor.h
src/mqtt/: mqtt_agent.c  mqtt_agent.h
src/publish/: publish.c  publish.h
src/reboot/: reboot.c  reboot.h
src/watchdog/: watchdog.c  watchdog.h
src/wifi/: lwipopts.h  wifi.c  wifi.h
src/wifi/commanding/: commanding.c  commanding.h
src/wifi/mqtt/: mqtt.c  mqtt.h
